# splitwise-totals

./: .gitignore  main.py  pyproject.toml
notebooks/: totals.ipynb
