[tool.poetry]
name = "splitwise"
version = "0.1.0"
description = ""
authors = ["Michał Bieroński <bieruskate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.2.3"
plotly = "^5.24.1"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
